Fix footer on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,7 +33,7 @@
 }
 
 .footer {
-  flex: 0 0 60px;
+  flex: 0 0 100%;
   max-height: 10vh;
   border-top: 1px solid #eaeaea;
   display: flex;
